# spade

./: .gitignore  CLAUDE.md  LICENSE.md  README.md  README_LLM0.md  agent.py  cmake_entrypoint.py  cmake_files_api.md  comparison_results.md  context.py  creating_test_repo.md  current_status.txt  debug_context.py  debug_target.py  default.spadeignore  default_run_phase0.yaml  directory_snapshot.py  evaluation_questions.md  final_test_output.txt  fresh_test_output.txt  ignore.py  knowledgebase.md  languages.py  learning.py  llm.py  llm0_prompts.md  llm0_rig_generator.py  llm0plan.md  lock.py  logger.py  main.py  markers.py  metaffi_architecture_manual.json  metaffi_architecture_manual.md  metaffi_complete_rig_summary.json  metaffi_prompts_from_rig.md  metaffi_prompts_generated.md  metaffi_prompts_generated.txt  nav.py  old_cmake_entrypoint.py  (+33 more)
tests/test_repos/cargo/rholang/: Cargo.toml
tests/test_repos/cargo/rholang/crates/ast/: Cargo.toml
tests/test_repos/cargo/rholang/crates/ast/src/: lib.rs  nodes.rs  pretty_print.rs  visitor.rs
tests/test_repos/cargo/rholang/crates/benchmark-suite/: Cargo.toml
tests/test_repos/cargo/rholang/crates/benchmark-suite/benches/: lexer_bench.rs  parser_bench.rs
tests/test_repos/cargo/rholang/crates/benchmark-suite/src/: main.rs
tests/test_repos/cargo/rholang/crates/codegen-bytecode/: Cargo.toml
tests/test_repos/cargo/rholang/crates/codegen-bytecode/src/: assembler.rs  instruction.rs  lib.rs
tests/test_repos/cargo/rholang/crates/codegen-c/: Cargo.toml
tests/test_repos/cargo/rholang/crates/codegen-c/src/: c_types.rs  emitter.rs  lib.rs
tests/test_repos/cargo/rholang/crates/common-types/: Cargo.toml
tests/test_repos/cargo/rholang/crates/common-types/src/: lib.rs  span.rs  symbol.rs
tests/test_repos/cargo/rholang/crates/error-reporting/: Cargo.toml
tests/test_repos/cargo/rholang/crates/error-reporting/src/: diagnostic.rs  lib.rs
tests/test_repos/cargo/rholang/crates/ffi-bridge/: Cargo.toml  build.rs
tests/test_repos/cargo/rholang/crates/ffi-bridge/include/: rholang.h
tests/test_repos/cargo/rholang/crates/ffi-bridge/src/: lib.rs  native.c
tests/test_repos/cargo/rholang/crates/integration-tests/: Cargo.toml
tests/test_repos/cargo/rholang/crates/integration-tests/src/: main.rs  test_runner.rs
tests/test_repos/cargo/rholang/crates/integration-tests/tests/: compile_tests.rs
tests/test_repos/cargo/rholang/crates/ir-gen/: Cargo.toml
tests/test_repos/cargo/rholang/crates/ir-gen/src/: ir.rs  lib.rs  lower.rs
tests/test_repos/cargo/rholang/crates/lexer/: Cargo.toml
tests/test_repos/cargo/rholang/crates/lexer/src/: lib.rs  scanner.rs  token.rs
tests/test_repos/cargo/rholang/crates/lsp-server/: Cargo.toml
tests/test_repos/cargo/rholang/crates/lsp-server/src/: handlers.rs  main.rs  protocol.rs
tests/test_repos/cargo/rholang/crates/optimizer/: Cargo.toml
tests/test_repos/cargo/rholang/crates/optimizer/src/: constant_folding.rs  dead_code.rs  lib.rs  passes.rs
tests/test_repos/cargo/rholang/crates/parser/: Cargo.toml
tests/test_repos/cargo/rholang/crates/parser/src/: decl.rs  expr.rs  lib.rs  stmt.rs
tests/test_repos/cargo/rholang/crates/repl/: Cargo.toml
tests/test_repos/cargo/rholang/crates/repl/src/: eval.rs  main.rs
tests/test_repos/cargo/rholang/crates/rholang-cli/: Cargo.toml
tests/test_repos/cargo/rholang/crates/rholang-cli/src/: compile.rs  main.rs
tests/test_repos/cargo/rholang/crates/rholang-macros/: Cargo.toml
tests/test_repos/cargo/rholang/crates/rholang-macros/src/: ast_node.rs  lib.rs  visitor.rs
tests/test_repos/cargo/rholang/crates/semantic-analyzer/: Cargo.toml
tests/test_repos/cargo/rholang/crates/semantic-analyzer/src/: lib.rs  resolver.rs  scope.rs
tests/test_repos/cargo/rholang/crates/span-interner/: Cargo.toml
tests/test_repos/cargo/rholang/crates/span-interner/src/: interner.rs  lib.rs
tests/test_repos/cargo/rholang/crates/stdlib/: Cargo.toml
tests/test_repos/cargo/rholang/crates/stdlib/src/: collections.rs  io.rs  lib.rs  string.rs
tests/test_repos/cargo/rholang/crates/type-checker/: Cargo.toml
tests/test_repos/cargo/rholang/crates/type-checker/src/: inference.rs  lib.rs  unification.rs
tests/test_repos/cargo/rholang/crates/vm-runtime/: Cargo.toml
tests/test_repos/cargo/rholang/crates/vm-runtime/src/: heap.rs  lib.rs  vm.rs  (+1 more)
tests/test_repos/cargo_workspace/: Cargo.toml
tests/test_repos/cargo_workspace/core/: Cargo.toml
tests/test_repos/cargo_workspace/core/src/: lib.rs
tests/test_repos/cargo_workspace/proc-macro-utils/: Cargo.toml
tests/test_repos/cargo_workspace/proc-macro-utils/src/: lib.rs
tests/test_repos/cmake_hello_world/: CMakeLists.txt
tests/test_repos/cmake_hello_world/evidence/: build_system_cpp_evidence.txt
tests/test_repos/cmake_hello_world/src/: main.cpp  utils.cpp  utils.h
tests/test_repos/jni_hello_world/: CMakeLists.txt  README.md
tests/test_repos/jni_hello_world/src/cpp/: jni_wrapper.cpp  main.cpp
tests/test_repos/jni_hello_world/src/go/: hello.go
tests/test_repos/jni_hello_world/src/java/: HelloWorld.java  MathUtils.java
tests/test_repos/jni_hello_world/tests/cpp/: test_jni_wrapper.cpp
tests/test_repos/meson/embedded_system/: config.h.in  meson.build  meson_options.txt
tests/test_repos/meson/embedded_system/src/: meson.build
tests/test_repos/meson/embedded_system/src/app/: main.c  meson.build
tests/test_repos/meson/embedded_system/src/core/: memory.c  memory.h  meson.build  system.c  system.h
tests/test_repos/meson/embedded_system/src/drivers/: meson.build  spi.cpp  spi.hpp  uart.cpp  uart.hpp
tests/test_repos/meson/embedded_system/src/protocol/: handler.c  handler.h  meson.build  protocol.proto
tests/test_repos/meson/embedded_system/subprojects/: json-c.wrap
tests/test_repos/meson/embedded_system/tests/: meson.build  test_drivers.cpp  test_system.c
tests/test_repos/meson/embedded_system/tools/: generate_headers.py  generate_protocol.py
tests/test_repos/meson_cpp/: meson.build
tests/test_repos/meson_cpp/src/: main.cpp  utils.cpp
tests/test_repos/meson_cpp/tests/: bench_utils.cpp  test_utils.cpp
(+632 files in other folders)
