[workspace]
members = [
    "core",
    "api",
    "cli",
    "proc-macro-utils"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Test Author <test@example.com>"]
license = "MIT"
repository = "https://github.com/example/cargo-workspace"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
