[workspace]
resolver = "2"
members = [
    # Tier 0 - Foundation
    "crates/common-types",
    "crates/error-reporting",
    "crates/rholang-macros",

    # Tier 1 - Frontend
    "crates/lexer",
    "crates/parser",
    "crates/ast",
    "crates/span-interner",

    # Tier 2 - Analysis
    "crates/semantic-analyzer",
    "crates/type-checker",
    "crates/ir-gen",
    "crates/optimizer",

    # Tier 3 - Backends & Runtime
    "crates/codegen-c",
    "crates/codegen-bytecode",
    "crates/vm-runtime",
    "crates/ffi-bridge",
    "crates/stdlib",

    # Tier 4 - Tools
    "crates/rholang-cli",
    "crates/repl",
    "crates/lsp-server",

    # Tier 5 - Testing & Utilities
    "crates/integration-tests",
    "crates/benchmark-suite",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["RhoLang Contributors"]
license = "MIT"

[workspace.dependencies]
# Workspace-shared dependencies for consistency
# Core/Parsing
logos = "0.13"
lalrpop-util = "0.20"
codespan-reporting = "0.11"
ariadne = "0.4"
unicode-xid = "0.2"

# Data Structures
dashmap = "5.5"
indexmap = "2.2"
smallvec = "1.13"
bumpalo = "3.14"
petgraph = "0.6"

# Async/Runtime
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# FFI/C Integration
libc = "0.2"
cc = "1.0"
bindgen = "0.69"

# Proc-Macros
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

# CLI/Utilities
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
