[package]
name = "benchmark-suite"
version.workspace = true
edition.workspace = true

[[bin]]
name = "benchmark-suite"
path = "src/main.rs"

[dependencies]
lexer = { path = "../lexer" }
parser = { path = "../parser" }
semantic-analyzer = { path = "../semantic-analyzer" }
vm-runtime = { path = "../vm-runtime" }
common-types = { path = "../common-types" }
criterion.workspace = true
anyhow.workspace = true
