[package]
name = "repl"
version.workspace = true
edition.workspace = true

[[bin]]
name = "repl"
path = "src/main.rs"

[dependencies]
lexer = { path = "../lexer" }
parser = { path = "../parser" }
semantic-analyzer = { path = "../semantic-analyzer" }
type-checker = { path = "../type-checker" }
vm-runtime = { path = "../vm-runtime" }
stdlib = { path = "../stdlib" }
common-types = { path = "../common-types" }
error-reporting = { path = "../error-reporting" }
clap.workspace = true
anyhow.workspace = true
