[package]
name = "type-checker"
version.workspace = true
edition.workspace = true

[dependencies]
ast = { path = "../ast" }
semantic-analyzer = { path = "../semantic-analyzer" }
common-types = { path = "../common-types" }
error-reporting = { path = "../error-reporting" }
petgraph.workspace = true
smallvec.workspace = true
